<package>
  <name>nxt_lxf2urdf</name>
  <version>1.0.0</version>
  <description> nxt_lxf2urdf converts a <a href="http://ldd.lego.com/">LEGO Digital Design file (*.lxf)</a> 
     to <a href="http://ros.org/wiki/urdf">urdf </a>.  
     nxt_lxf2urdf needs a (*.lxf) and a (*.ldr) file for completing the conversion
     from lxf to urdf.  It also has the ldraw.xml file that is in the
     assests folder of the LEGO Digital Designer which has been
     modified to add more part</description>
  <maintainer email="nobody@example.com">Melonee Wise</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/nxt_lxf2urdf</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Melonee Wise</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->

  <!-- Dependencies needed after this package is compiled. -->

  <!-- Dependencies needed only for running tests. -->

</package>

