<package>
  <name>ros-nxt</name>
  <version>1.0.0</version>
  <description>This stack has basic interfaces for interacting with ROS and NXT. The software in this 
    stack is intended to run on top of the default NXT firmware provided by lego.</description>
  <maintainer email="nobody@example.com">Maintained by Tully Foote</maintainer>
  <maintainer email="nobody@example.com">Wim Meeussen</maintainer>
  <maintainer email="nobody@example.com">and Melonee Wise</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/nxt</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Maintained by Tully Foote</author>
  <author>Wim Meeussen</author>
  <author>and Melonee Wise</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->


  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>nxt_description</run_depend>
  <run_depend>nxt_rviz_plugin</run_depend>
  <run_depend>nxt_msgs</run_depend>
  <run_depend>nxt_lxf2urdf</run_depend>
  <run_depend>nxt_python</run_depend>
  <run_depend>nxt_ros</run_depend>
  <run_depend>nxt_controllers</run_depend>

  <!-- Dependencies needed only for running tests. -->







</package>
